Bug 150916 - Bibliography entry creation does not update type if selected from dropdown
Summary: Bibliography entry creation does not update type if selected from dropdown
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.2.7.2 release
Hardware: x86-64 (AMD64) Linux (All)
: medium minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.5.0 target:7.4.3
Keywords: regression
Depends on:
Blocks: GTK3
  Show dependency treegraph
 
Reported: 2022-09-12 10:12 UTC by Timo Mikkolainen
Modified: 2022-10-03 12:04 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Timo Mikkolainen 2022-09-12 10:12:30 UTC
Description:
Bibliography entry can only be updated by entering a numeric value in the entry table: selecting a value from the type dropdown does not update the value.
This was also reproduced on Windows 10 with 7.4.0 and an earlier version as well, maybe around 7.1?

Steps to Reproduce:
1. Open Writer
2. Open Tools -> Bibliography Database
3. Click on small + on bottom left of table to create new entry
4. Add a value to Short name field, tab out of it (value is updated in table)
5. Select 'Book' from Type dropdown, tab out of field after that

Actual Results:
Entry type in table (and the actual entry data) is empty

Expected Results:
Entry type in table (and the actual entry data) is changed to 'Book'


Reproducible: Always


User Profile Reset: Yes


OpenGL enabled: Yes

Additional Info:
Changing the value in the table (write 1 in the field and press enter) updates the dropdown as well, it seems to just be the dropdown selection that is broken.
Selecting the value twice in the dropdown (i.e. first 'Article', then 'Book') seems to work around the issue.

Version: 7.3.5.2 / LibreOffice Community
Build ID: 30(Build:2)
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Ubuntu package version: 1:7.3.5-0ubuntu0.22.04.1
Calc: threaded
Comment 1 Timo Mikkolainen 2022-09-12 10:15:12 UTC
Step 4 is with the form components on the bottom, not in the table.
Comment 2 Timur 2022-09-27 10:02:13 UTC
No repro in Windows. No repro GEN or KF5. Repro GTK3.
Comment 3 Caolán McNamara 2022-09-27 11:27:00 UTC
This is a somewhat similar problem to tdf#148197 in this case "Book" was last selected by a previous entry and "unselecting" it didn't return to the same state as an initial nothing-selected case
Comment 4 Commit Notification 2022-09-27 13:14:44 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f0c2719baadee4b2b315d61d39ce35bfbddfffcc

tdf#150916 make unselect in combobox dropdown same as initially unselected

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2022-09-27 13:16:14 UTC
done in trunk, backport to 7-4 in gerrit
Comment 6 Commit Notification 2022-09-27 14:04:17 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/8e9c818f87b20b07d6180d56eaed858740b4d76c

tdf#150916 make unselect in combobox dropdown same as initially unselected

It will be available in 7.4.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Timo Mikkolainen 2022-10-03 11:36:57 UTC
Fix confirmed with 7.4 2022-10-03_07.32.08 daily, thanks for your work.
Comment 8 Timur 2022-10-03 12:04:10 UTC
..so Verified.