tdf#150916 make unselect in combobox dropdown same as initially unselected

a similar issue as seen in tdf#148197

Change-Id: I3848fe7b48f6148a5ae13d484c866953fed83c90
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140647
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>