vcl/unx/gtk3/gtkinst.cxx
@@ -21149,22 +21149,24 @@ private:
 
     void tree_view_set_cursor(int pos)
     {
+        GtkTreePath* path;
         if (pos == -1)
         {
+            path = gtk_tree_path_new();
             gtk_tree_selection_unselect_all(gtk_tree_view_get_selection(m_pTreeView));
             if (m_pCellView)
                 gtk_cell_view_set_displayed_row(m_pCellView, nullptr);
         }
         else
         {
-            GtkTreePath* path = gtk_tree_path_new_from_indices(pos, -1);
+            path = gtk_tree_path_new_from_indices(pos, -1);
             if (gtk_tree_view_get_model(m_pTreeView))
                 gtk_tree_view_scroll_to_cell(m_pTreeView, path, nullptr, false, 0, 0);
-            gtk_tree_view_set_cursor(m_pTreeView, path, nullptr, false);
             if (m_pCellView)
                 gtk_cell_view_set_displayed_row(m_pCellView, path);
-            gtk_tree_path_free(path);
         }
+        gtk_tree_view_set_cursor(m_pTreeView, path, nullptr, false);
+        gtk_tree_path_free(path);
     }
 
     int tree_view_get_cursor() const
